<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.astrika.stywis_staff.view.menus.viewmodels.BillGenerationViewModel" />

        <variable
            name="bigDecimal"
            type="java.math.BigDecimal" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/air_bnb_cereal_medium"
            android:paddingBottom="5dp"
            android:text="@{viewModel.displayTableNos != null ? `Order for Table `+ viewModel.displayTableNos : ``}"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Order for Table 5A" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circular_top_rounded_corner_white_background"
            app:layout_constraintBottom_toTopOf="@+id/confirm_order_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/order_review_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/air_bnb_cereal_medium"
                    android:text="Bill Details"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bill_generation_order_review_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/order_review_text_view"
                    android:layout_marginTop="10dp"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <RelativeLayout
                    android:id="@+id/discount_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/bill_generation_order_review_recycler"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/grey_background_with_grey_stroke"
                    android:clickable="@{!viewModel.isAppliedDiscount}"
                    android:onClick="@{()-> viewModel.onApplicableDiscountsClick()}">

                    <ImageView
                        android:id="@+id/discount_image_view"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_apply_discount" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/arrow_img"
                        android:layout_toEndOf="@id/discount_image_view"
                        android:fontFamily="@font/air_bnb_cereal_medium"
                        android:text="@{viewModel.appliedDiscountString}"
                        android:textColor="@color/colorBlack"
                        tools:text="@string/apply_discount_and_complementary" />

                    <ImageView
                        android:id="@+id/arrow_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:onClick="@{()->viewModel.onRemoveAppliedCouponClick()}"
                        android:padding="10dp"
                        android:src="@{viewModel.isAppliedDiscount ? @drawable/ic_close_accent_24dp : @drawable/ic_arrow_right}"
                        app:tint="?attr/colorControlNormal"
                        tools:src="@drawable/ic_arrow_right" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/discount_layout"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/grey_background_with_grey_stroke">

                    <TextView
                        android:id="@+id/bill_details_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/air_bnb_cereal_medium"
                        android:text="Bill Details"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/order_details_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bill_details_text_view"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@string/order_details"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/order_details_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bill_details_text_view"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@{`₹ ` + viewModel.totalOrderPrice.toString()}"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp"
                        tools:text="₹ 134" />

                    <TextView
                        android:id="@+id/discount_applicable_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/order_details_text_view"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@string/discount_applicable"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_below="@id/order_details_text_view"
                        android:layout_toEndOf="@id/discount_applicable_text_view"
                        android:padding="5dp"
                        android:src="@drawable/ic_information" />

                    <TextView
                        android:id="@+id/discount_Applicable_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/order_details_price_text_view"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@{viewModel.discountPrice.equals(bigDecimal.ZERO) ? `₹ 0` : `- ₹ ` + viewModel.discountPrice}"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp"
                        tools:text="₹ 134" />

                    <View
                        android:id="@+id/divider_1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/discount_applicable_text_view"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="7dp"
                        android:background="@color/random_light_grey" />

                    <TextView
                        android:id="@+id/tax_and_charges_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider_1"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@string/tax_and_charges"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_below="@id/divider_1"
                        android:layout_toEndOf="@id/tax_and_charges_text_view"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:src="@drawable/ic_information" />

                    <TextView
                        android:id="@+id/tax_and_charges_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider_1"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:gravity="end"
                        android:text="@{`₹ ` + viewModel.taxAndCharges.toString()}"
                        android:textColor="@color/colorBlack"
                        android:textSize="11dp"
                        tools:text="₹  45" />

                    <View
                        android:id="@+id/divider_2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/tax_and_charges_text_view"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="7dp"
                        android:background="@color/random_light_grey" />

                    <TextView
                        android:id="@+id/to_pay_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider_2"
                        android:layout_marginStart="30dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@string/to_pay"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/to_pay_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider_2"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="50dp"
                        android:fontFamily="@font/air_bnb_cereal_book"
                        android:text="@{`₹ ` + viewModel.toPayableAmount.toString()}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="11dp"
                        tools:text="₹ 472" />

                </RelativeLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/confirm_order_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <!--

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@{viewModel.isPaymentDone ? @color/random_grey : @color/colorPrimary}"
                            android:clickable="@{!viewModel.isPaymentDone}"
                            android:fontFamily="@font/air_bnb_cereal_medium"
                            android:onClick="@{()-> viewModel.onPaymentModeClick()}"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:text="@string/payment_mode"
                            android:textAllCaps="false"
                            android:textColor="@{viewModel.isPaymentDone ? @color/grey : @color/colorWhite}" />
            -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@{viewModel.isPaymentDone ? @drawable/grey_background : @drawable/color_primary_background}"
                android:clickable="@{!viewModel.isPaymentDone}"
                android:fontFamily="@font/air_bnb_cereal_medium"
                android:gravity="center"
                android:onClick="@{()-> viewModel.onPaymentModeClick()}"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/payment_mode"
                android:textAllCaps="false"
                android:textColor="@{viewModel.isPaymentDone ? @color/grey : @color/colorWhite}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@{viewModel.isPaymentDone ? @drawable/color_primary_background : @drawable/grey_background}"
                android:clickable="@{viewModel.isPaymentDone}"
                android:fontFamily="@font/air_bnb_cereal_medium"
                android:gravity="center"
                android:onClick="@{()-> viewModel.onCheckOutClick()}"
                android:padding="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/check_out"
                android:textAllCaps="false"
                android:textColor="@{viewModel.isPaymentDone ? @color/colorWhite : @color/grey}" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>